--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,10 @@
 
   --font-sans: "Outfit", sans-serif;
 
-  --color-link: color-mix(in srgb, currentColor 50%, var(--color-indigo-500));
+  --color-link: color-mix(in srgb, currentColor, var(--color-sky-500)50%);
+
+  --inset-shadow: inset --spacing(0) --spacing(10) --spacing(10) --spacing(-10)
+    color-mix(in srgb, currentColor, transparent 75%);
 }
 
 body {
@@ -17,20 +20,35 @@ body {
 
 header,
 section {
-  @apply flex flex-col items-center gap-8 px-[max(--spacing(8),(100%---spacing(200))/2)] py-8;
+  @apply flex flex-col items-center gap-8 px-[max(--spacing(12),(100%---spacing(200))/2)] py-12;
+}
+
+p {
+  @apply leading-loose;
+}
+
+b {
+  @apply font-semibold;
 }
 
 svg {
   @apply shrink-0 overflow-visible;
 }
 
-a {
+a:not(.button):not(.button-dark) {
   @apply text-link underline underline-offset-2 transition-colors hover:text-current;
 }
 
-button,
-.button {
-  @apply inline-flex cursor-pointer items-center justify-center gap-2 rounded p-2 text-current transition-colors hover:bg-current/10;
+button {
+  @apply cursor-pointer;
+}
+
+@utility button-dark {
+  @apply inline-flex items-center justify-center gap-2 rounded p-2 text-current transition-colors hover:bg-current/10;
+}
+
+@utility button {
+  @apply inline-flex items-center justify-center gap-2 rounded bg-zinc-500/10 p-2 transition-colors;
 }
 
 .lucide {
@@ -44,4 +62,8 @@ button,
 .lucide-play,
 .lucide-pause {
   @apply fill-current stroke-0;
+}
+
+@utility icon {
+  @apply h-[1.5em] w-[unset] fill-current;
 }
