--- a/src/styles.css
+++ b/src/styles.css
@@ -8,10 +8,7 @@
 
   --font-sans: "Outfit", sans-serif;
 
-  --color-link: color-mix(in srgb, currentColor, var(--color-sky-500)50%);
-
-  --inset-shadow: inset --spacing(0) --spacing(10) --spacing(10) --spacing(-10)
-    color-mix(in srgb, currentColor, transparent 75%);
+  --color-link: color-mix(in srgb, currentColor, var(--color-sky-500) 50%);
 }
 
 body {
@@ -19,12 +16,17 @@ body {
 }
 
 header,
-section {
-  @apply flex flex-col items-center gap-8 px-[max(--spacing(12),(100%---spacing(200))/2)] py-12;
+section,
+footer {
+  @apply relative z-0 flex flex-col items-center gap-8 overflow-hidden px-[max(--spacing(12),(100%---spacing(200))/2)] py-12;
+}
+
+@utility dark {
+  @apply bg-zinc-900! text-white;
 }
 
 p {
-  @apply leading-loose;
+  @apply leading-relaxed;
 }
 
 b {
@@ -48,7 +50,12 @@ button {
 }
 
 @utility button {
-  @apply inline-flex items-center justify-center gap-2 rounded bg-zinc-500/10 p-2 transition-colors;
+  @apply inline-flex items-center justify-center gap-2 rounded bg-zinc-500/10 p-2 transition-colors hover:bg-zinc-500/25;
+}
+
+input,
+textarea {
+  @apply rounded border border-zinc-500/25 bg-transparent p-2 placeholder:text-zinc-500/50 focus:border-zinc-500/50 focus:outline-none;
 }
 
 .lucide {
@@ -65,5 +72,5 @@ button {
 }
 
 @utility icon {
-  @apply h-[1.5em] w-[unset] fill-current;
+  @apply h-[1em] fill-current;
 }
