use upstream types, misc styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Layout from "@/layouts/Layout.astro";
 
 <Layout
   title="Vincent Rubinetti"
-  description="Composer for media. Orchestral, electronic, and a wide variety of other styles."
+  description="Composer, developer, more. Orchestral, electronic, and a wide variety of other styles."
 >
   <body>
     <header class="dark">
