--- a/src/pages/studio.astro
+++ b/src/pages/studio.astro
@@ -2,6 +2,7 @@
 import Footer from "@/home/Footer.vue";
 import Title from "@/home/Title.vue";
 import Layout from "@/layouts/Layout.astro";
+import Studio_ from "@/studio/Studio.vue";
 ---
 
 <Layout
@@ -13,7 +14,7 @@ import Layout from "@/layouts/Layout.astro";
       <Title />
     </header>
     <main>
-      <section></section>
+      <Studio_ />
     </main>
     <Footer />
   </body>
