--- a/src/styles.css
+++ b/src/styles.css
@@ -107,7 +107,7 @@ button {
 
 input,
 textarea {
-  @apply rounded border border-current/25 p-3 placeholder:text-current/50;
+  @apply rounded border border-current/25 bg-white p-3 placeholder:text-current/50;
 }
 
 .lucide {
