--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import About from "@/home/About.vue";
 import Background from "@/home/Background.vue";
 import Contact from "@/home/Contact.vue";
+import Extras from "@/home/Extras.vue";
 import Follow from "@/home/Follow.vue";
 import Footer from "@/home/Footer.vue";
 import Highlights from "@/home/Highlights.vue";
@@ -24,6 +25,7 @@ import Layout from "@/layouts/Layout.astro";
       <Follow />
       <Highlights client:load />
       <About />
+      <Extras client:load />
       <Contact client:load />
     </main>
     <Footer />
