--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
   --font-sans: "Outfit Variable", sans-serif;
 
   --color-cream: hsl(30, 50%, 95%);
-  --color-link: color-mix(in srgb, hsl(180, 100%, 50%), currentColor 50%);
+  --color-link: color-mix(in srgb, hsl(200, 100%, 50%), currentColor 25%);
 
   --radius: 7.5px;
 
@@ -53,7 +53,7 @@ main {
 header,
 section,
 footer {
-  @apply relative z-0 flex flex-col items-center gap-12 px-[max(--spacing(16),(100%-var(--width))/2)] py-16;
+  @apply relative z-0 flex flex-col items-center gap-12 px-[max(--spacing(16),(100%-var(--width))/2)] py-16 max-lg:p-10 max-md:p-8 max-sm:p-6 max-xs:p-4;
 }
 
 @utility dark {
@@ -98,11 +98,11 @@ button {
 }
 
 @utility button-dark {
-  @apply relative inline-flex items-center justify-center gap-2 rounded p-4 font-sans text-current transition-all hover:-translate-y-px hover:bg-current/10;
+  @apply relative inline-flex items-center justify-center gap-2 rounded p-4 font-sans text-current transition-all hover:bg-current/10;
 }
 
 @utility button {
-  @apply relative inline-flex items-center justify-center gap-2 rounded bg-current/5 p-4 font-sans transition-all hover:-translate-y-px hover:bg-current/10;
+  @apply relative inline-flex items-center justify-center gap-2 rounded bg-current/5 p-4 font-sans transition-all hover:bg-current/10;
 }
 
 input,
@@ -110,6 +110,7 @@ textarea {
   @apply rounded border border-current/25 bg-white p-3 placeholder:text-current/50;
 }
 
+.icon,
 .lucide {
   @apply h-[1em] w-[unset];
 }
