--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,10 @@
 
 @theme {
   --breakpoint-xs: 20rem;
-  --breakpoint-sm: 30rem;
-  --breakpoint-md: 40rem;
-  --breakpoint-lg: 50rem;
-  --breakpoint-xl: 60rem;
+  --breakpoint-sm: 32rem;
+  --breakpoint-md: 44rem;
+  --breakpoint-lg: 56rem;
+  --breakpoint-xl: 68rem;
 
   --width: --spacing(220);
 
@@ -53,7 +53,7 @@ main {
 header,
 section,
 footer {
-  @apply max-xs:p-4 relative z-0 flex flex-col items-center gap-12 px-[max(--spacing(16),(100%-var(--width))/2)] py-16 max-lg:p-10 max-md:p-8 max-sm:p-6;
+  @apply max-xs:p-4 relative z-0 flex flex-col items-center gap-12 px-[max(--spacing(14),(100%-var(--width))/2)] py-14 max-xl:gap-12 max-xl:p-12 max-lg:gap-10 max-lg:p-10 max-md:gap-8 max-md:p-8 max-sm:gap-6 max-sm:p-6;
 }
 
 @utility dark {
