--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,10 +3,10 @@ import "@/styles.css";
 import "@fontsource-variable/aleo";
 import "@fontsource-variable/outfit";
 
-export interface Props {
+export type Props = {
   title: string;
   description: string;
-}
+};
 
 const { title, description } = Astro.props;
 ---
