--- a/src/pages/studio.astro
+++ b/src/pages/studio.astro
@@ -2,6 +2,7 @@
 import Footer from "@/home/Footer.vue";
 import Title from "@/home/Title.vue";
 import Layout from "@/layouts/Layout.astro";
+// import BandcampHeader from "@/studio/BandcampHeader.vue";
 import Studio_ from "@/studio/Studio.vue";
 ---
 
@@ -9,13 +10,12 @@ import Studio_ from "@/studio/Studio.vue";
   title="Studio"
   description="A look inside my music studio, gear, and workflow."
 >
-  <body>
-    <header class="dark">
-      <Title />
-    </header>
-    <main>
-      <Studio_ />
-    </main>
-    <Footer />
-  </body>
+  <!-- <BandcampHeader client:only="vue"/> -->
+  <header class="dark">
+    <Title />
+  </header>
+  <main>
+    <Studio_ />
+  </main>
+  <Footer />
 </Layout>
