--- a/src/pages/studio.astro
+++ b/src/pages/studio.astro
@@ -11,7 +11,7 @@ import Studio_ from "@/studio/Studio.vue";
   description="A look inside my music studio, gear, and workflow."
 >
   <!-- <BandcampHeader client:only="vue"/> -->
-  <header class="dark">
+  <header class="bg-black text-white">
     <Title />
   </header>
   <main>
