--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,5 +30,5 @@ import Layout from "@/layouts/Layout.astro";
     <Extras client:load />
     <Contact client:load />
   </main>
-  <Footer />
+  <Footer class="text-white" />
 </Layout>
