--- a/src/pages/studio.astro
+++ b/src/pages/studio.astro
@@ -17,5 +17,5 @@ import Studio_ from "@/studio/Studio.vue";
   <main>
     <Studio_ />
   </main>
-  <Footer />
+  <Footer class="bg-black text-white" />
 </Layout>
