--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,14 +14,9 @@ const { title, description } = Astro.props;
 <html lang="en">
   <head>
     <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-42575210-1"></script>
-
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      window.dataLayer.push(["js", new Date()]);
-      window.dataLayer.push(["config", "UA-42575210-1"]);
-    </script>
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="0ff809f6-188d-4d44-8e7d-681e16ecb620"></script>
 
     <script>
       /** make all external links open in a new tab */
